--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 
 	<header class="uk-panel">
 		<div class="uk-container uk-container-xlarge" style="padding: 5em">
-			<h1 class="uk-h1 uk-text-center" style="font-size: 70px; background: -webkit-linear-gradient(#33ccff, #6600ff); -webkit-background-clip: text;-webkit-text-fill-color: transparent;">RIVAS DEV</h1>
+			<h1 class="uk-h1 uk-text-center" style="font-size: 70px; background: -webkit-linear-gradient(180deg, #33ccff, #6600ff); -webkit-background-clip: text;-webkit-text-fill-color: transparent; letter-spacing: 2px;">RIVAS DEV</h1>
 			<div class="uk-container uk-container-small">
-				<p class="uk-h2 uk-text-center" style="font-family: monospace; background: -webkit-linear-gradient(#0099ff, #66ccff); -webkit-background-clip: text;-webkit-text-fill-color: transparent;">Software y Diseño</p>
+				<p class="uk-h2 uk-text-center" style="font-family: monospace; background: -webkit-linear-gradient(#0099ff, #66ccff); -webkit-background-clip: text;-webkit-text-fill-color: transparent; letter-spacing: 5px;">Software y Diseño</p>
 			</div>
 		</div>
 
 		<hr class="uk-divider-icon">
 
-		<!-- REDES SOCIALES --->
+		<!-- SOCIAL NETWORKS --->
 		<div class="uk-column-1-3">
 			<!--- LINKEDIN --->
 			<div class="uk-align-center" style="width: 30px;">
@@ -39,10 +39,10 @@
 	    		<a href="#" class="uk-align-center"><span uk-icon="icon: whatsapp; ratio: 1.5"></span></a>
 	    	</div>
 		</div>
-		<!--- END REDES SOCIALES ---->
+		<!--- END SOCIAL NETWORKS ---->
 	</header>
 
-	<!-- Sobre nosotros --->
+	<!-- ABOUT US --->
 	<div class="uk-section">
 		
 		<div class="uk-container uk-column-1-2@s uk-column-1-2@m uk-column-1-2@l uk-column-divider uk-padding-small" >
@@ -59,11 +59,20 @@
 			<p style="color: white;">Brindamos servicio de asistencia a negocios con crecimiento acelerado para que puedan cumplir con sus objetivos, con contratos de confidencialidad.</p>
 			<p style="color: white;">¡Tenemos un gran equipo a tu disposíción en cualquier momento que lo necesites, para darte una mejor y más rápida solución!</p>
 		</div>
-
 	</div>
+	<!--- END ABOUT US --->
+
+	<!---  PROJECTS --->
+	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="background-image: url('src/background.jpg');">
+
+    <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase">servicios<br>
+    	<div class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-h4">Estos son algunos de los servicios generales que brindamos</div>
+  	</div>
+	</div>
+	<!-- END PROJECTS -->
 
 	<!-- FORM --->
-	<main style="padding: 1em; max-width: 600px;" class="uk-align-center">
+	<main style="padding: 1em; max-width: 600px;" class="uk-align-center" uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
 		<div class="uk-padding-small uk-light uk-panel" style="background: rgba(0, 0, 0, 0.8);">
 				<div>
 					<form action="#" method="post">
@@ -83,6 +92,9 @@
 				          <textarea class="uk-textarea" rows="5" placeholder="Contenido" required="required"></textarea>
 				        </div>
 		        			<button class="uk-button uk-button-default">Enviar</button>
+		        			<div uk-drop>
+					        	<div class="uk-card uk-card-body uk-card-default">¡Recuerda poner bien tu dato de contacto!</div>
+					    		</div>
 			    		</div>
 
 		    			</fieldset>
@@ -90,11 +102,12 @@
 				</div>
 			</div>
 	</main>
+	<!-- END FORM --->
 
 	<!-- CARDS CONTACT --->
 	<footer class="uk-padding uk-align-center" style="max-width: 900px;">
 
-			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid style="background: rgba(255,255,255,0.5); border: 2px solid #ff99cc; border-radius: 15px; padding: 5px;">
+			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid style="background: rgba(255,255,255,0.5); border: 2px solid #ff99cc; border-radius: 15px;" uk-scrollspy="cls: uk-animation-slide-left; repeat: false">
 		    <div class="uk-card-media-left uk-cover-container">
 		        <img src="src/whatsapp.png" alt="" uk-cover>
 		        <canvas width="600" height="400"></canvas>
@@ -107,7 +120,7 @@
 		    </div>
 			</div>
 
-			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid style="background: rgba(255,255,255,0.5); border: 2px solid #ff99cc; border-radius: 15px; padding: 5px;">
+			<div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-2@s uk-margin" uk-grid style="background: rgba(255,255,255,0.5); border: 2px solid #ff99cc; border-radius: 15px;" uk-scrollspy="cls: uk-animation-slide-right; repeat: false">
 			    <div class="uk-flex-last@s uk-card-media-right uk-cover-container">
 			        <img src="src/email.png" alt="" uk-cover>
 			        <canvas width="600" height="400"></canvas>
@@ -119,29 +132,7 @@
 			        </div>
 			    </div>
 			</div>
-
-		<!----
-		<div class="uk-padding-small">
-			<a href="#" uk-totop uk-scroll></a>
-			<div class="uk-h2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-		</div>
-		--->
 	</footer>
-
+	<!---  END CARDS CONTACT --->
 </body>
 </html>
