--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<header class="uk-panel">
 		<div class="uk-container uk-container-xlarge" style="padding: 5em">
-			<h1 class="uk-h1 uk-text-center" style="font-size: 70px; background: -webkit-linear-gradient(180deg, #33ccff, #6600ff); -webkit-background-clip: text;-webkit-text-fill-color: transparent; letter-spacing: 2px;">RIVAS DEV</h1>
+			<h1 class="uk-h1 uk-text-center" style="font-size: 70px; background: -webkit-linear-gradient(100deg, #33ccff, #6600ff); -webkit-background-clip: text;-webkit-text-fill-color: transparent; letter-spacing: 2px;">RIVAS DEV</h1>
 			<div class="uk-container uk-container-small">
 				<p class="uk-h2 uk-text-center" style="font-family: monospace; background: -webkit-linear-gradient(#0099ff, #66ccff); -webkit-background-clip: text;-webkit-text-fill-color: transparent; letter-spacing: 5px;">Software y Diseño</p>
 			</div>
@@ -57,19 +57,46 @@
 		<div class="uk-h3 uk-container uk-column-1-2@s uk-column-1-2@m uk-column-1-2@l uk-padding-small uk-column-divider">
 			<p style="color: white;">La realización del proyecto tiene diferentes etapas y es normal que surjan dudas sobre qué camino tomar para hacerlo más viable. Por eso te asesoramos y acompañamos constantemente para que puedas estar seguro de que lo que eliges es lo mejor.</p>
 			<p style="color: white;">Brindamos servicio de asistencia a negocios con crecimiento acelerado para que puedan cumplir con sus objetivos, con contratos de confidencialidad.</p>
-			<p style="color: white;">¡Tenemos un gran equipo a tu disposíción en cualquier momento que lo necesites, para darte una mejor y más rápida solución!</p>
+			<p style="color: white;">¡Tenemos un gran equipo a tu disposición en cualquier momento que lo necesites, para darte una mejor y más rápida solución!</p>
 		</div>
 	</div>
 	<!--- END ABOUT US --->
 
 	<!---  PROJECTS --->
-	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="background-image: url('src/background.jpg');">
+	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200">
 
-    <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase">servicios<br>
+    <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase uk-heading-line"><span>servicios</span><br>
     	<div class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-h4">Estos son algunos de los servicios generales que brindamos</div>
   	</div>
 	</div>
 	<!-- END PROJECTS -->
+
+	<!-- CARDS PROJECTS --->
+	<div class="uk-child-width-1-2@m uk-padding" uk-grid>
+    <div>
+        <div class="uk-card uk-card-default">
+            <div class="uk-card-media-top">
+                <img src="src/design.png" alt="">
+            </div>
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Media Top</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+        </div>
+    </div>
+    <div>
+        <div class="uk-card uk-card-default">
+            <div class="uk-card-body">
+                <h3 class="uk-card-title">Media Bottom</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+            </div>
+            <div class="uk-card-media-bottom">
+                <img src="src/design.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>>
+	<!-- END CARDS PROJECTS --->
 
 	<!-- FORM --->
 	<main style="padding: 1em; max-width: 600px;" class="uk-align-center" uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
