--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>RIVAS DEV</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="index.css">
+	<style type="text/css">* { padding: 0; margin: 0; }</style>
 	
 	<!-- Framework CSS: uikit --->
   <link rel="stylesheet" href="css/uikit.min.css" />
@@ -63,7 +63,7 @@
 	<!--- END ABOUT US --->
 
 	<!---  PROJECTS --->
-	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200">
+	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="background: #006c78; border-top: double;">
 
     <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase uk-heading-line"><span>servicios</span><br>
     	<div class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-h4">Estos son algunos de los servicios generales que brindamos</div>
@@ -72,31 +72,84 @@
 	<!-- END PROJECTS -->
 
 	<!-- CARDS PROJECTS --->
-	<div class="uk-child-width-1-2@m uk-padding" uk-grid>
+	<div class="uk-child-width-1-3@s uk-grid-match uk-padding-small" uk-grid style="background: #006c78">
+
     <div>
-        <div class="uk-card uk-card-default">
-            <div class="uk-card-media-top">
-                <img src="src/design.png" alt="">
-            </div>
-            <div class="uk-card-body">
-                <h3 class="uk-card-title">Media Top</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-        </div>
+      <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
+          <h3 class="uk-card-title uk-text-uppercase">desarrollo</h3>
+          <p>Realizamos productos digitales para una gran variedad de necesidades, utilizando diferentes herramientas, prácticas y tecnología para cada caso, buscando soluciones confiables, sostenibles y eficientes.</p>
+      </div>
     </div>
+
     <div>
-        <div class="uk-card uk-card-default">
-            <div class="uk-card-body">
-                <h3 class="uk-card-title">Media Bottom</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
-            </div>
-            <div class="uk-card-media-bottom">
-                <img src="src/design.png" alt="">
-            </div>
-        </div>
+      <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light uk-align-center">
+          <h3 class="uk-card-title uk-text-uppercase">control de calidad</h3>
+          <p>Nuestros servicios lo ayudarán a establecer un control concreto sobre el ciclo de vida de su producto, monitorear cada etapa de desarrollo y brindarle información precisa sobre la calidad del producto.</p>
+      </div>
     </div>
-</div>>
+
+    <div>
+      <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
+          <h3 class="uk-card-title uk-text-uppercase">consultoría</h3>
+          <p>Analice y mejore su arquitectura de software y marketing, cree una estrategia digital impulsada por la tecnología, a través de una planificación cuidadosa y una estrategia eficaz con nuestros profesionales.</p>
+      </div>
+    </div>
+
+	</div>
 	<!-- END CARDS PROJECTS --->
+
+
+
+
+
+
+	<!---  METHOD --->
+	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="background: #005d78; border-top: double;">
+    <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase uk-heading-line"><span>modalidades de contratación</span><br>
+    	<div class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-h4">¿Qué es mejor para vos?</div>
+  	</div>
+	</div>
+	<!-- END METHOD -->
+
+	<!--  CARDS SERVICE -->
+	<div class="uk-child-width-1-2@s uk-grid-match uk-padding-small" uk-grid style="background: #005d78">
+
+    <div>
+        <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
+            <h3 class="uk-card-title uk-text-uppercase">tiempo y material</h3>
+            <p>Realizamos productos digitales para una gran variedad de necesidades, utilizando diferentes herramientas, prácticas y tecnología para cada caso, buscando soluciones confiables, sostenibles y eficientes.</p>
+        </div>
+    </div>
+
+    <div>
+        <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light uk-align-center">
+            <h3 class="uk-card-title uk-text-uppercase">precio fijo tiempo fijo</h3>
+            <p>Nuestros servicios lo ayudarán a establecer un control concreto sobre el ciclo de vida de su producto, monitorear cada etapa de desarrollo y brindarle información precisa sobre la calidad del producto.</p>
+        </div>
+    </div>
+
+    <div>
+        <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
+            <h3 class="uk-card-title uk-text-uppercase">hora empresarial</h3>
+            <p>Analice y mejore su arquitectura de software y marketing, cree una estrategia digital impulsada por la tecnología, a través de una planificación cuidadosa y una estrategia eficaz con nuestros profesionales.</p>
+        </div>
+    </div>
+
+		<div>
+	    <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
+	      <h3 class="uk-card-title uk-text-uppercase">socios</h3>
+	      <p>Nos involucramos en el proyecto y lo desarrollamos juntos.</p>
+	    </div>
+	  </div>
+
+	</div>
+	<!-- END CARDS SERVICE ---->
+
+
+
+
+
+
 
 	<!-- FORM --->
 	<main style="padding: 1em; max-width: 600px;" class="uk-align-center" uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
