--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>RIVAS DEV</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<style type="text/css">* { padding: 0; margin: 0; }</style>
+	<style type="text/css">* { padding: 0; margin: 0; } .bg-1 {background: rgba(70,212,202,0.4);} .bg-2 {background: rgba(0, 20, 200, 0.2);}</style>
 	
 	<!-- Framework CSS: uikit --->
   <link rel="stylesheet" href="css/uikit.min.css" />
@@ -63,7 +63,7 @@
 	<!--- END ABOUT US --->
 
 	<!---  PROJECTS --->
-	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="background: #006c78; border-top: double;">
+	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="/*background: #006c78; border-top: double;*/">
 
     <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase uk-heading-line"><span>servicios</span><br>
     	<div class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-h4">Estos son algunos de los servicios generales que brindamos</div>
@@ -71,40 +71,35 @@
 	</div>
 	<!-- END PROJECTS -->
 
-	<!-- CARDS PROJECTS --->
-	<div class="uk-child-width-1-3@s uk-grid-match uk-padding-small" uk-grid style="background: #006c78">
+	<!-- CARDS SERVICE --->
+	<div class="uk-child-width-1-3@s uk-grid-match uk-padding-small" uk-grid style="/*background: #006c78*/">
 
     <div>
-      <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
-          <h3 class="uk-card-title uk-text-uppercase">desarrollo</h3>
+      <div class="uk-card uk-card-body uk-light bg-1">
+          <h3 class="uk-card-title uk-text-uppercase uk-button-text">desarrollo</h3>
           <p>Realizamos productos digitales para una gran variedad de necesidades, utilizando diferentes herramientas, prácticas y tecnología para cada caso, buscando soluciones confiables, sostenibles y eficientes.</p>
       </div>
     </div>
 
     <div>
-      <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light uk-align-center">
-          <h3 class="uk-card-title uk-text-uppercase">control de calidad</h3>
+      <div class="uk-card uk-card-body uk-light uk-align-center bg-1">
+          <h3 class="uk-card-title uk-text-uppercase uk-button-text">control de calidad</h3>
           <p>Nuestros servicios lo ayudarán a establecer un control concreto sobre el ciclo de vida de su producto, monitorear cada etapa de desarrollo y brindarle información precisa sobre la calidad del producto.</p>
       </div>
     </div>
 
     <div>
-      <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
-          <h3 class="uk-card-title uk-text-uppercase">consultoría</h3>
+      <div class="uk-card uk-card-body uk-light bg-1">
+          <h3 class="uk-card-title uk-text-uppercase uk-button-text">consultoría</h3>
           <p>Analice y mejore su arquitectura de software y marketing, cree una estrategia digital impulsada por la tecnología, a través de una planificación cuidadosa y una estrategia eficaz con nuestros profesionales.</p>
       </div>
     </div>
 
 	</div>
-	<!-- END CARDS PROJECTS --->
-
-
-
-
-
+	<!-- END CARDS SERVICE --->
 
 	<!---  METHOD --->
-	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="background: #005d78; border-top: double;">
+	<div class="uk-height-small uk-background-cover uk-light uk-flex" uk-parallax="bgy: -200" style="/*background: #005d78; border-top: double;*/">
     <div class="uk-h1 uk-width-1-2@m uk-text-center uk-margin-auto uk-margin-auto-vertical uk-text-uppercase uk-heading-line"><span>modalidades de contratación</span><br>
     	<div class="uk-text-center uk-margin-auto uk-margin-auto-vertical uk-h4">¿Qué es mejor para vos?</div>
   	</div>
@@ -112,44 +107,38 @@
 	<!-- END METHOD -->
 
 	<!--  CARDS SERVICE -->
-	<div class="uk-child-width-1-2@s uk-grid-match uk-padding-small" uk-grid style="background: #005d78">
+	<div class="uk-child-width-1-2@s uk-grid-match uk-padding-small" uk-grid style="/*background: #005d78*/">
 
     <div>
-        <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
-            <h3 class="uk-card-title uk-text-uppercase">tiempo y material</h3>
+        <div class="uk-card uk-card-body uk-light bg-2">
+            <h3 class="uk-card-title uk-text-uppercase uk-button-text">tiempo y material</h3>
             <p>Realizamos productos digitales para una gran variedad de necesidades, utilizando diferentes herramientas, prácticas y tecnología para cada caso, buscando soluciones confiables, sostenibles y eficientes.</p>
         </div>
     </div>
 
     <div>
-        <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light uk-align-center">
-            <h3 class="uk-card-title uk-text-uppercase">precio fijo tiempo fijo</h3>
+        <div class="uk-card uk-card-body uk-light uk-align-center  bg-2">
+            <h3 class="uk-card-title uk-text-uppercase uk-button-text">precio fijo tiempo fijo</h3>
             <p>Nuestros servicios lo ayudarán a establecer un control concreto sobre el ciclo de vida de su producto, monitorear cada etapa de desarrollo y brindarle información precisa sobre la calidad del producto.</p>
         </div>
     </div>
 
     <div>
-        <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
-            <h3 class="uk-card-title uk-text-uppercase">hora empresarial</h3>
+        <div class="uk-card uk-card-body uk-light bg-2">
+            <h3 class="uk-card-title uk-text-uppercase uk-button-text">hora empresarial</h3>
             <p>Analice y mejore su arquitectura de software y marketing, cree una estrategia digital impulsada por la tecnología, a través de una planificación cuidadosa y una estrategia eficaz con nuestros profesionales.</p>
         </div>
     </div>
 
 		<div>
-	    <div class="uk-card uk-card-secondary uk-card-hover uk-card-body uk-light">
-	      <h3 class="uk-card-title uk-text-uppercase">socios</h3>
+	    <div class="uk-card uk-card-body uk-light bg-2">
+	      <h3 class="uk-card-title uk-text-uppercase uk-button-text">socios</h3>
 	      <p>Nos involucramos en el proyecto y lo desarrollamos juntos.</p>
 	    </div>
 	  </div>
 
 	</div>
 	<!-- END CARDS SERVICE ---->
-
-
-
-
-
-
 
 	<!-- FORM --->
 	<main style="padding: 1em; max-width: 600px;" class="uk-align-center" uk-scrollspy="target: > div; cls: uk-animation-fade; delay: 300">
@@ -171,13 +160,12 @@
 				        <div class="uk-margin">
 				          <textarea class="uk-textarea" rows="5" placeholder="Contenido" required="required"></textarea>
 				        </div>
-		        			<button class="uk-button uk-button-default">Enviar</button>
-		        			<div uk-drop>
-					        	<div class="uk-card uk-card-body uk-card-default">¡Recuerda poner bien tu dato de contacto!</div>
-					    		</div>
-			    		</div>
 
-		    			</fieldset>
+		        		<button class="uk-button uk-button-default">Enviar</button>
+	        			<div uk-drop>
+				        	<div class="uk-card uk-card-body uk-card-default">¡Recuerda poner bien tu dato de contacto!</div>
+				    		</div>
+		    		</fieldset>
 					</form>
 				</div>
 			</div>
